# dvbapp2

./: .gitignore  .travis.yml  Navigation.py  README.md  RecordTimer.py  configure.ac  enigma2.bb  mytest.py  pyo_patcher.py  skin.py  upgrade.py
.github/workflows/: SonarCloud.yml  enigma2.yml  updatepot.yml
data/: Makefile.am  keymap.ntr  keymap.u80  keymap.xml  menu.xml  menuspa.xml  networkdaemons.xml  setup.xml  skin_default.xml  skin_text_clock.xml  startwizard.xml  unicable.xml  videowizard.xml
data/7segment/: Makefile.am  skin_display.xml
data/clock220/: clock_lcd_analog.xml  clock_lcd_analog_blue.xml  clock_lcd_analog_rail.xml  clock_lcd_analog_red.xml  clock_lcd_analog_spa.xml  clock_lcd_analog_spa_white.xml  clock_lcd_analog_white.xml  clock_lcd_digital.xml  clock_lcd_digital_blue_large.xml  clock_lcd_digital_flipClock.xml  clock_lcd_digital_red.xml  clock_lcd_digital_red_large.xml  clock_lcd_digital_white.xml  clock_lcd_digital_white_large.xml
data/clock400/: clock_lcd_analog.xml  clock_lcd_analog_blue.xml  clock_lcd_analog_digital.xml  clock_lcd_analog_modern.xml  clock_lcd_analog_rail.xml  clock_lcd_analog_red.xml  clock_lcd_analog_spa.xml  clock_lcd_analog_spa_white.xml  clock_lcd_analog_white.xml  clock_lcd_digital_flipClock.xml  clock_lcd_digital_flip_modern.xml  clock_lcd_digital_weather.xml  clock_lcd_modern.xml
data/clock400s/: Makefile.am  clock_lcd_analog.xml  clock_lcd_analog_blue.xml  clock_lcd_analog_digital.xml  clock_lcd_analog_modern.xml  clock_lcd_analog_rail.xml  clock_lcd_analog_red.xml  clock_lcd_analog_spa.xml  clock_lcd_analog_spa_white.xml  clock_lcd_analog_white.xml  clock_lcd_digital_blue_openspa.xml  (+2 more)
data/fonts/: Makefile.am
doc/: DOCUMENTATION
include/: hardwaredb.h
main/: Makefile.am  bsod.cpp  enigma.cpp
po/: Makefile.am  aa.po  ar.po  bg.po  ca.mo  ca.po  cs.po  da.po  de.po  el.po  en.po  en_AU.po  en_GB.po  enigma2.mo  enigma2.pot  es.mo  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ku.po  lt.po  lv.po  nb.po  nl.po  nn.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+12 more)
tests/: enigma.py  events.py  fake_time.py  test_timer.py
tools/: enigma2.sh.in  svg2skin.py
(+561 files in other folders)
